--- a/style.css
+++ b/style.css
@@ -65,6 +65,20 @@ header .register {
     height: 19rem;
     align-items: center;
 }
+
+.compra{
+    padding: 0.7rem;
+    border-radius: 1rem;
+    border: solid 0px transparent;
+    background-color: #ff7543;
+}
+
+.compra:hover{
+    background-color: #bd6b4e;
+    transition: 0.8s;
+    border: solid 1px black;
+    color: white;
+}
 img{
     width: 12rem;
 }
@@ -99,3 +113,50 @@ footer .footer-buttons button {
     font-weight: bold;
     cursor: pointer;
 }
+
+footer .footer-buttons button:hover{
+    background-color: #bd6b4e;
+    transition: 0.8s;
+    border: solid 1px black;
+}
+
+
+
+/* The Modal (background) */
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding: 10px;
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: scroll; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  
+  /* The Close Button */
+  .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
